@@ -168,7 +168,7 @@ int headerGetRawEntry(Header h, int_32 tag,
 /** \ingroup header
  * Dump a header in human readable format (for debugging).
  * @param h		header
- * @param flags		0 or HEADER_DUMP_LINLINE
+ * @param flags		0 or HEADER_DUMP_INLINE
  * @param tags		array of tag name/value pairs
  */
 /*@unused@*/
